test/corpus/core.txt
============================================
Symbol
============================================

hello

---

(source_file
  (expression (symbol)))

============================================
Symbol with arrow
============================================

hello->world

---

(source_file
  (expression (symbol)))


============================================
Division Symbol
============================================

/

---

(source_file
  (expression (symbol)))

============================================
Bool
============================================

true

---

(source_file
  (expression (symbol)))


============================================
Nil
============================================

nil

---

(source_file
  (expression (symbol)))

============================================
Keyword
============================================

:keyword

---

(source_file
  (expression (keyword)))

============================================
String
============================================

"hello"

---

(source_file
  (expression (string)))

============================================
Integer
============================================

1

---

(source_file
  (expression (integer)))

============================================
Float
============================================

1.23

---

(source_file
  (expression (float)))

============================================
Ratio
============================================

5/3

---

(source_file
  (expression (ratio (integer) (integer))))

============================================
Array
============================================

[1 2 3]

---

(source_file
  (expression
    (array
      (expression
        (integer))
      (expression
        (integer))
      (expression
        (integer)))))

============================================
Array with comma
============================================

[1, 2, 3]

---

(source_file
  (expression
    (array
      (expression
        (integer))
      (expression
        (integer))
      (expression
        (integer)))))

============================================
Comment at end of line
============================================

[1, 2, 3] ; here is a comment

---

(source_file
  (expression
    (array
      (expression
        (integer))
      (expression
        (integer))
      (expression
        (integer))))
  (expression
    (comment)))


============================================
Map
============================================

{:a 1 :b 2}

---

(source_file
  (expression
    (map
      (expression
        (keyword))
      (expression
        (integer))
      (expression
        (keyword))
      (expression
        (integer)))))


============================================
Call
============================================

(+ 1 2)

---

(source_file
  (expression
    (call
      (expression
        (symbol))
      (expression
        (integer))
      (expression
        (integer)))))


============================================
Quote
============================================

'(+ 1 2)

---

(source_file
  (expression
    (quote
      (expression
        (call
          (expression
            (symbol))
          (expression
            (integer))
          (expression
            (integer)))))))

